[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/themes/PanelStyleBoxFlat.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/fonts/PT-BoldItalic_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/textures/icons/left_arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/HomeButton.png" type="Texture" id=4]
[ext_resource path="res://src/interfaces/Items/Book.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/icons/right_arrow.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_right = 0.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 70, 70 )
modulate_color = Color( 0.135864, 0.156796, 0.207031, 1 )

[sub_resource type="StyleBoxTexture" id=2]
content_margin_right = 0.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 70, 70 )
modulate_color = Color( 0.156863, 0.180392, 0.239216, 1 )

[sub_resource type="StyleBoxTexture" id=7]
content_margin_right = 0.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 70, 70 )
modulate_color = Color( 0.207843, 0.235294, 0.301961, 1 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_right = 0.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 70, 70 )
modulate_color = Color( 0.12549, 0.145098, 0.192157, 1 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.0859833, 0.100905, 0.136719, 1 )
thickness = 3

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.443137, 0.47451, 0.54902, 0.85098 )
grow_begin = -3.0
grow_end = -3.0
thickness = 2
vertical = true

[node name="Book" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 48
script = ExtResource( 5 )

[node name="PreviousButton" type="Button" parent="."]
margin_top = 508.0
margin_right = 64.0
margin_bottom = 572.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Page précédente"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
disabled = true
enabled_focus_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="PreviousButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="PreviousButton/CenterContainer"]
modulate = Color( 0.521569, 0.52549, 0.54902, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Pages" type="HBoxContainer" parent="."]
margin_left = 112.0
margin_right = 1808.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="Panel" parent="Pages"]
margin_right = 842.0
margin_bottom = 1080.0
rect_clip_content = true
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Pages/Left"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/margin_right = 28
custom_constants/margin_top = 48
custom_constants/margin_left = 28
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Left/MarginContainer"]
margin_left = 28.0
margin_top = 48.0
margin_right = 814.0
margin_bottom = 1074.0
rect_clip_content = true
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Pages/Left/MarginContainer/VBoxContainer"]
margin_right = 786.0
margin_bottom = 4.0
custom_styles/separator = SubResource( 4 )

[node name="LeftContainer" type="GridContainer" parent="Pages/Left/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 786.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 14

[node name="LeftLabel" type="Label" parent="Pages/Left/MarginContainer/VBoxContainer"]
margin_top = 996.0
margin_right = 786.0
margin_bottom = 1026.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "- 1 -"
align = 1

[node name="VSeparator" type="VSeparator" parent="Pages"]
margin_left = 846.0
margin_right = 849.0
margin_bottom = 1080.0
custom_constants/separation = 3
custom_styles/separator = SubResource( 6 )

[node name="Right" type="Panel" parent="Pages"]
margin_left = 853.0
margin_right = 1696.0
margin_bottom = 1080.0
rect_clip_content = true
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Pages/Right"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/margin_right = 28
custom_constants/margin_top = 48
custom_constants/margin_left = 28
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Right/MarginContainer"]
margin_left = 28.0
margin_top = 48.0
margin_right = 815.0
margin_bottom = 1074.0
rect_clip_content = true
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Pages/Right/MarginContainer/VBoxContainer"]
margin_right = 787.0
margin_bottom = 4.0
custom_styles/separator = SubResource( 4 )

[node name="RightContainer" type="GridContainer" parent="Pages/Right/MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 787.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 14

[node name="RightLabel" type="Label" parent="Pages/Right/MarginContainer/VBoxContainer"]
margin_top = 996.0
margin_right = 787.0
margin_bottom = 1026.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "- 1 -"
align = 1

[node name="NextButton" type="Button" parent="."]
margin_left = 1856.0
margin_top = 508.0
margin_right = 1920.0
margin_bottom = 572.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Page suivante"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
disabled = true
enabled_focus_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="NextButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="NextButton/CenterContainer"]
modulate = Color( 0.521569, 0.52549, 0.54902, 1 )
margin_left = 18.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
